manifests/cluster-addons/sealed-secrets/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sealed-secrets
  labels:
    pod-security.kubernetes.io/enforce: restricted
