manifests/cluster-addons/sealed-secrets/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sealed-secrets
  namespace: sealed-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sealed-secrets

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
