manifests/cluster-addons/sealed-secrets/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sealed-secrets
  namespace: sealed-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sealed-secrets

  ingress: []

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - rules:
            http: []
          ports:
            - port: 6443
              protocol: TCP
